# openget

./: .gitignore  LICENSE  README.md  pypi.sh  pyproject.toml  setup.py
docker/: Dockerfile  build.sh
docs/: conf.py  index.rst
docs/user/: install.rst
graper/: __init__.py  env.py  setting.py  util.py
graper/db/: __init__.py  db.py  db_mysql.py  db_oracle.py  db_oss.py  db_redis.py  db_sqlite.py  util.py
graper/examples/: simple_spider.py
graper/network/: downloader.py  proxy.py  request.py  response.py
graper/spiders/: __init__.py  base.py  batch_spider.py
graper/tests/db/: test_sqlite.py
graper/utils/: log.py
graper/utils/message/: dingtalk.py
openget/: __init__.py  __main__.py  env.py  setting.py  util.py
openget/db/: __init__.py  db.py  db_mysql.py  db_oracle.py  db_oss.py  db_postgresql.py  db_redis.py  db_sqlite.py
openget/examples/: example.env  simple_spider.py  simple_sqlite_spider.py
openget/network/: downloader.py  proxy.py  request.py  response.py
openget/spiders/: __init__.py  base.py  batch_spider.py
openget/test/: db_mysql_test.py  redis_lock_test.py
openget/tests/db/: test_sqlite.py
openget/tests/network/: test_proxy.py
openget/utils/: log.py  s3.py
